--- a/src/content/options.html
+++ b/src/content/options.html
@@ -122,26 +122,8 @@
 
         <label data-i18n="globalExclude"></label>
         <p class="description" data-i18n="globalExcludeDescription"></p>
-        <div class="globalExclude">
-          <label data-i18n="wildcard"></label>
-          <textarea id="globalExcludeWildcard"></textarea>
+        <textarea id="passthrough"></textarea>
 
-          <label>Reg Exp</label>
-          <textarea id="globalExcludeRegex"></textarea>
-
-          <!-- proxy.onRequest bypasses "Connections to localhost, 127.0.0.1/8, and ::1 are never proxied." restrictions -->
-          <label data-i18n="quickAdd"></label>
-          <select>
-            <option value="" disabled selected>&nbsp;</option>
-            <option data-type="regex" value="^http://.+">HTTP</option>
-            <option data-type="regex" value="^https://.+">HTTPS</option>
-            <option data-type="regex" value="^https?://[^.]+/" data-i18n="plainHost"></option>
-            <option data-type="regex" value="^https?://10(\.\d+){3}/">10.*.*.*</option>
-            <!-- <option data-type="regex" value="^https?://127\.0\.0\.1/">127.0.0.1</option> -->
-            <option data-type="regex" value="^https?://172\.16(\.\d+){2}/">172.16.*.*</option>
-            <option data-type="regex" value="^https?://192\.168(\.\d+){2}/">192.168.*.*</option>
-          </select>
-        </div>
 
         <button type="submit" data-i18n="saveOptions"></button>
       </fieldset>
