--- a/src/content/options.html
+++ b/src/content/options.html
@@ -583,16 +583,20 @@
       <table>
         <thead>
           <tr>
-            <th style="width: 1.5em;"></th>
-            <th style="width: 5em;" data-i18n="time"></th>
-            <th style="width: 1em;"><img src="../image/container.svg" alt=""></th>
-            <th style="width: 3em;" data-i18n="method"></th>
+            <th colspan="6" data-i18n="request"></th>
+            <th colspan="4" data-i18n="proxy"></th>
+          </tr>
+          <tr>
+            <th></th>
+            <th data-i18n="time"></th>
+            <th><img src="../image/container.svg" alt=""></th>
+            <th data-i18n="method"></th>
             <th data-i18n="documentURL"></th>
             <th data-i18n="url"></th>
-            <th><span data-i18n="proxy"></span>: <span data-i18n="title"></span></th>
-            <th style="width: 3em;" data-i18n="type"></th>
+            <th data-i18n="title"></th>
+            <th data-i18n="type"></th>
             <th data-i18n="hostname"></th>
-            <th style="width: 3em;" data-i18n="port"></th>
+            <th data-i18n="port"></th>
            </tr>
         </thead>
         <tbody>
