--- a/src/content/options.html
+++ b/src/content/options.html
@@ -589,7 +589,7 @@
             <th style="width: 3em;" data-i18n="method"></th>
             <th data-i18n="documentURL"></th>
             <th data-i18n="url"></th>
-            <th><span data-i18n="proxy"></span>: <span data-i18n="title"></span></th>
+            <th><span data-i18n="proxy"></span> <span data-i18n="title"></span></th>
             <th style="width: 3em;" data-i18n="type"></th>
             <th data-i18n="hostname"></th>
             <th style="width: 3em;" data-i18n="port"></th>
