--- a/src/content/help.html
+++ b/src/content/help.html
@@ -416,6 +416,9 @@
     <p class="warning">If FoxyProxy is to set to use an Individual Proxy/PAC, editing proxy's hostname, port, or PAC URL, may result in a mismatch until it is set again.</p>
 
     <dl>
+      <dt>⎘ Duplicate Proxy</dt>
+      <dd>Click to duplicate proxy and its patterns</dd>
+
       <dt>Toggle Button</dt>
       <dd>Toggle proxy active or inactive</dd>
       <dd>Inactive proxies do not show in toolbar popup select</dd>
@@ -473,6 +476,12 @@
     <p>Duplicate patterns will be removed.</p>
 
     <dl>
+      <dt>📥 Import</dt>
+      <dd>Import patterns that were exported</dd>
+
+      <dt>📤 Export</dt>
+      <dd>Export patterns to import later</dd>
+
       <dt>Quick Add</dt>
       <dd>Add ready-made patterns</dd>
       <dd><code>Plain Host</code> matches hostnames that contain no dots, e.g. <code>http://intranet/</code></dd>
