--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,14 +19,16 @@
       <dt>8.1</dt>
       <dd>Added 'DIRECT' option to Set Tab Proxy (#33)</dd>
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
+      <dd>Added duplicate proxy feature</dd>
       <dd>Added Incognito/Container proxy (#33)</dd>
       <dd>Added Keyboard Shortcut feature</dd>
-      <dd>Added more data to the Log</dd>
+      <dd>Added pattern import/export</dd>
       <dd>Added port search to search filter</dd>
       <dd>Added search filter to Toolbar popup (#23)</dd>
       <dd>Fixed a pattern conversion issue (#28)</dd>
       <dd>Fixed an error in Sync (#36)</dd>
-      <dd>Increased Log display entries to 200</dd>
+      <dd>Increased log content</dd>
+      <dd>Increased log display entries to 200</dd>
       <dd>Increased log width to full screen</dd>
       <dd>Updated Global Exclude process</dd>
 
