--- a/src/content/about.html
+++ b/src/content/about.html
@@ -27,6 +27,7 @@
       <dd>Added search filter to Toolbar popup (#23)</dd>
       <dd>Fixed a pattern conversion issue (#28)</dd>
       <dd>Fixed an error in Sync (#36)</dd>
+      <dd>Fixed Tab Proxy icon when reloading a tab (#33)</dd>
       <dd>Increased log content</dd>
       <dd>Increased log display entries to 200</dd>
       <dd>Increased log width to full screen</dd>
