--- a/src/content/help.html
+++ b/src/content/help.html
@@ -92,6 +92,7 @@
 
     <h2 id="toolbar-icon">Toolbar Icon</h2>
     <ul>
+      <li>Grey icon indicates proxying is handled by another extension</li>
       <li>Icons badge indicates selection</li>
       <li>Mouse-over title displays selection details</li>
     </ul>
@@ -104,8 +105,8 @@
       <dd>Connections are proxied based on patterns</dd>
       <dd>If there are no patterns that match the URL being loaded, connections are made without a proxy</dd>
 
-      <dt>Disable</dt>
-      <dd>FoxyProxy is completely bypassed; connections are handled by the browser</dd>
+      <dt>Disable or Direct</dt>
+      <dd>Normal proxying is set to system and handled by the browser</dd>
 
       <dt>Individual Proxy</dt>
       <dd>Connections are passed through the selected proxy (or PAC)</dd>
@@ -122,7 +123,7 @@
       <dd>Add host (with its protocol) to the Global Exclude</dd>
 
       <dt>Set Tab Proxy <span>(Firefox only)</span></dt>
-      <dd>Tab Proxy is processed before standard proxy settings</dd>
+      <dd>Tab Proxy is processed before normal proxy settings</dd>
       <dd>Select a proxy for the current tab</dd>
       <dd>Only top 10 active proxies are listed</dd>
       <dd>FoxyProxy icon will show in the selected tab and mouse-over title displays selection details</dd>
