--- a/src/content/options.html
+++ b/src/content/options.html
@@ -34,7 +34,7 @@
     </nav>
   </div>
 
-  <div class="progressBar"></div>
+  <div class="progress-bar"></div>
 
   <article>
     <!-- spinner -->
