--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,7 +17,7 @@
     <h1 id="changelog">Changelog</h1>
     <dl>
       <dt>8.1</dt>
-      <dd>Added 'DIRECT' option to Set Tab Proxy (#33)</dd>
+      <!-- <dd>Added 'DIRECT' option to Set Tab Proxy (#33)</dd> -->
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
       <dd>Added duplicate proxy feature</dd>
       <dd>Added Incognito/Container proxy (#33)</dd>
