--- a/src/content/help.html
+++ b/src/content/help.html
@@ -418,7 +418,7 @@
 
     <dl>
       <dt>⎘ Duplicate Proxy</dt>
-      <dd>Click to duplicate proxy and its patterns</dd>
+      <dd>Click to duplicate previously saved proxy and its patterns</dd>
 
       <dt>Toggle Button</dt>
       <dd>Toggle proxy active or inactive</dd>
