--- a/src/content/about.html
+++ b/src/content/about.html
@@ -53,7 +53,6 @@
       <dd>Updated code & style for manifest v3 (MV3) compatibility</dd>
       <dd>Updated Import Proxy List</dd>
       <dd>Updated User Interface</dd>
-
     </dl>
 
     <h1 id="credits">Credits</h1>
@@ -77,6 +76,23 @@
       <dd>uk: <a href="https://github.com/sponsors/webknjaz" target="_blank">Sviatoslav Sydorenko</a></dd>
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
+
+<!--
+      <dt>Founder</dt>
+
+
+      <dd>
+        <figure>
+          <img src="../image/ericjung.png" alt="">
+          <figcaption><a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</figcaption>
+        </figure>
+      </dd>
+      <dd>Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or
+        <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries.</dd>
+      <dd><i>(including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>)</i></dd>
+      <dd style="font: 1.5em cursive;">Thank you for using FoxyProxy!</dd>
+      <dd><img src="../image/logo.svg" style="width: 5em;" alt=""></dd> -->
+
     </dl>
 
 
