--- a/src/content/options.html
+++ b/src/content/options.html
@@ -137,7 +137,7 @@
 
       <fieldset class="proxySection">
 
-        <div class="proxyTop">
+        <div class="proxy-top">
           <button type="button" class="flat" data-i18n="add"></button>
           <input type="text" id="filter" spellcheck="false" placeholder="filter">
           <span></span>
@@ -164,7 +164,7 @@
 
           <div class="content">
 
-            <div class="proxyBox">
+            <div class="proxy-box">
               <label data-i18n="title"></label>
               <input type="text" data-id="title" spellcheck="false" placeholder="title">
 
@@ -467,7 +467,7 @@
               <input type="url" data-id="pac" data-type="pac" placeholder="PAC URL">
             </div>
 
-            <div class="patternHead">
+            <div class="pattern-head">
               <span data-i18n="quickAdd"></span>
               <span data-i18n="include"></span>
               <span data-i18n="type"></span>
@@ -478,11 +478,11 @@
               <button type="button" class="flat" data-i18n="add"></button>
             </div>
 
-            <div class="patternBox"></div>
+            <div class="pattern-box"></div>
           </div>
         </details>
 
-        <div class="patternRow">
+        <div class="pattern-row">
           <select>
             <option value="" disabled selected>&nbsp;</option>
             <option data-type="regex" value="\S+" data-i18n="all"></option>
@@ -517,7 +517,7 @@
     <section class="import">
       <fieldset>
 
-        <details class="importAccount">
+        <details class="import-account">
           <summary data-i18n="importFoxyProxyAccount"></summary>
           <div class="content">
             <label data-i18n="username"></label>
@@ -531,7 +531,7 @@
           </div>
         </details>
 
-        <details class="importFromUrl">
+        <details class="import-from-url">
           <summary data-i18n="importFromURL"></summary>
           <div class="content">
             <input type="url" placeholder="https://example.com/settings.json">
@@ -539,7 +539,7 @@
           </div>
         </details>
 
-        <details class="importProxyList">
+        <details class="import-proxy-list">
           <summary data-i18n="importProxyList"></summary>
           <div class="content">
             <textarea></textarea>
@@ -547,7 +547,7 @@
           </div>
         </details>
 
-        <details class="importFromOlder">
+        <details class="import-from-older">
           <summary data-i18n="importFromOlderVersions"></summary>
           <div class="content">
             <label class="flat" data-i18n="import"><input type="file" accept=".json, .xml"></label>
@@ -573,7 +573,7 @@
         <input type="text" placeholder="*://*.example.com/">
 
         <label data-i18n="result"></label>
-        <span class="testResult"></span>
+        <span class="test-result"></span>
 
         <button type="button" class="flat" data-i18n="test"></button>
         <button type="button" class="flat" data-i18n="back">◁ </button>
