--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,7 +17,6 @@
     <h1 id="changelog">Changelog</h1>
     <dl>
       <dt>8.1</dt>
-      <!-- <dd>Added 'DIRECT' option to Set Tab Proxy (#33)</dd> -->
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
       <dd>Added duplicate proxy feature</dd>
       <dd>Added Incognito/Container proxy (#33)</dd>
@@ -45,8 +44,8 @@
       <dd>Added Limit WebRTC feature</dd>
       <dd>Added live Log (Firefox only)</dd>
       <dd>Added Tab Proxy feature (Firefox only)</dd>
-      <dd>Changed <code>"browsingData"</code> to optional permissions</dd>
-      <dd>Dropped 'browser_style' in preparation for MV3</dd>
+      <dd>Changed "browsingData" to optional permissions</dd>
+      <dd>Dropped "browser_style" in preparation for MV3</dd>
       <dd>Increased minimum version to Firefox 93 (released 2021-10-05)</dd>
       <dd>Unified code for Firefox, Chrome, and other Chromium-based browsers</dd>
       <dd>Unified storage to share between Firefox & Chrome</dd>
@@ -61,10 +60,6 @@
       <dt>Developer</dt>
       <dd><a href="https://github.com/erosman" target="_blank">erosman</a></dd>
 
-      <dt>Icons</dt>
-      <dd>SVG: Mozilla</dd>
-      <dd>SVG: http://www.onlinewebfonts.com/icon</dd>
-
       <dt>Translations</dt>
       <dd><a href="https://github.com/foxyproxy/browser-extension" target="_blank">Github Public Repository</a></dd>
       <dd>es: <a href="https://github.com/LuisAlfredo92" target="_blank">Luis Alfredo Figueroa Bracamontes</a></dd>
@@ -76,22 +71,6 @@
       <dd>uk: <a href="https://github.com/sponsors/webknjaz" target="_blank">Sviatoslav Sydorenko</a></dd>
       <dd>zh_CN: <a href="https://github.com/wsxy162" target="_blank">FeralMeow </a></dd>
       <dd>zh_TW: <a href="https://github.com/samuikaze" target="_blank">samuikaze</a></dd>
-
-<!--
-      <dt>Founder</dt>
-
-
-      <dd>
-        <figure>
-          <img src="../image/ericjung.png" alt="">
-          <figcaption><a href="mailto:eric.jung@getfoxyproxy.org">Eric H. Jung</a><br>Denver, Colorado, USA</figcaption>
-        </figure>
-      </dd>
-      <dd>Please <a href="https://www.paypal.me/ericjung2/5.99" target="_blank">donate</a> or
-        <a href="https://getfoxyproxy.org/order/" target="_blank">buy dedicated VPN/Proxy Servers</a> in over 100 countries.</dd>
-      <dd><i>(including such remote places like <a href="https://wikipedia.org/wiki/Réunion" target="_blank">Reunion Island</a>)</i></dd>
-      <dd style="font: 1.5em cursive;">Thank you for using FoxyProxy!</dd>
-      <dd><img src="../image/logo.svg" style="width: 5em;" alt=""></dd> -->
 
     </dl>
 
