--- a/src/content/options.html
+++ b/src/content/options.html
@@ -190,7 +190,7 @@
 
               <label data-i18n="country"></label>
               <select data-id="cc">
-                <option value="" disabled selected>&nbsp;</option>
+                <option value="" selected>&nbsp;</option>
                 <option value="AF">🇦🇫 Afghanistan</option>
                 <option value="AL">🇦🇱 Albania</option>
                 <option value="DZ">🇩🇿 Algeria</option>
