--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,13 @@
 
     <h1 id="changelog">Changelog</h1>
     <dl>
+
+      <dt>8.2</dt>
+      <dd>Added blank option to set the country to blank</dd>
+      <dd>Added managed storage feature (#42)</dd>
+      <dd></dd>
+
+
       <dt>8.1</dt>
       <dd>Added Drag and Drop sorting of proxies (#29)</dd>
       <dd>Added duplicate proxy feature</dd>
