--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -33,11 +33,11 @@
             <option value="" disabled selected>&nbsp;</option>
           </select>
 
-          <button type="button" data-i18n="quickAdd"></button>
-          <button type="button" class="firefox" data-i18n="setTabProxy"></button>
+          <button type="button" class="local" data-i18n="quickAdd"></button>
+          <button type="button" class="firefox local" data-i18n="setTabProxy"></button>
 
-          <button type="button" data-i18n="excludeHost"></button>
-          <button type="button" class="firefox" data-i18n="unsetTabProxy"></button>
+          <button type="button" class="local" data-i18n="excludeHost"></button>
+          <button type="button" class="firefox local" data-i18n="unsetTabProxy"></button>
         </div>
 
         <div class="buttons">
